added 'download my resume' function to the html file. uploaded resume.pdf within the main directory.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,14 @@
 
                 <h4><strong>College – BS Psychology</strong></h4>
                 <p><em>Cavite State University (2022 - 2023)</em></p>
-            </section>
+            </section><hr>
         </main>
+
+        <aside>
+            <h3>Download Resume</h3>
+            <a href="resume.pdf" download>Download My Resume</a>
+        </aside>
+        <hr>
     </body>
     <footer>©2025 Gabriel Caratihan. All rights reserved.</footer>
 </html>
