uploaded 'intro.mp4' and added the section "video_intro' under contact section that shows my short video introduction.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 </ul>
             </section><hr>
 
+            <section class="video_intro">
+                <h3>1 Minute Video Introduction</h3>
+                <video width="720" controls autoplay muted>
+                    <source src="intro.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </section>
+
             <section id="professional_summary">
                 <h3>Professional Summary</h3>
                 <p>Results-driven <strong>Customer Service & Sales Professional</strong> with 2+ years of experience boosting sales and delivering exceptional client support. Proven track record of driving a <strong>20% sales increase</strong> and maintaining a <strong>98% customer satisfaction rate</strong>. Skilled in the full client lifecycle—from outbound prospecting and lead nurturing to inbound support and retention. Leverages a background in <strong>Psychology</strong> and <strong>Programming</strong> to connect with clients, analyze behavior, and quickly master new technologies.</p>
