Added current position, ESL teacher

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="My resume for applying to Customer Service positions online.">
         <meta name="keywords" content="Virtual Assistant, Customer Service, Freelancing, Admnistrative Assistant">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -52,6 +53,14 @@
             <section>
                 <article>
                     <h3>Professional Experience</h3>
+                    <div class="current-position">
+                        <h4><em>ESL Teacher</em></h4>
+                        <p><em>August 2024 - Present</em></p>
+                        <ul>
+                            <li>Performed administrative tasks using Google Workspace, Microsoft 365 Apps</li>
+                            <li>Developed lesson plans and tracked students language acquisition progress</li>
+                        </ul>
+                    </div>
                     <h4><em>Sales Manager | Algorithmics</em></h4>
                     <p><em>August 2024 - November 2024</em></p>
                     <ul>
