fixed the color to black, changed copyright to 2026, fixed font size in lists

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
         <aside>
             <h3>Download Resume</h3>
-            <a href="resume.pdf" download>Download My Resume</a>
+            <a href="resume.pdf" download>Click to download</a>
         </aside>
         <hr>
     </body>
-    <footer>©2025 Gabriel Caratihan. All rights reserved.</footer>
+    <footer>©2026 Gabriel Caratihan. All rights reserved.</footer>
 </html>
