--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section><hr>
 
             <section class="video_intro">
-                <h3>1 Minute Video Introduction</h3>
+                <h3>One-Minute Video Introduction</h3>
                 <video width="720" controls autoplay muted>
                     <source src="intro.mp4" type="video/mp4">
                     Your browser does not support the video tag.
@@ -57,8 +57,9 @@
                         <h4><em>ESL Teacher</em></h4>
                         <p><em>August 2024 - Present</em></p>
                         <ul>
-                            <li>Performed administrative tasks using Google Workspace, Microsoft 365 Apps</li>
-                            <li>Developed lesson plans and tracked students language acquisition progress</li>
+                            <li><strong>Communication & Rapport Building: </strong>Adapted complex information and information for diverse international audiences, ensuring 100% clarity and professional rappport across various cultural backgrounds.</li>
+                            <li><strong>Administrative & Data Management: </strong>Managed high-volume digital documentation and progress reports using Microsoft Excel and Google Workspaces (Docs, Sheets, and Drives), ensuring 100% accuracy.</li>
+                            <li><strong>Systems & Content Creation: </strong>Leveraged <strong>Zoom Workplace</strong>, <strong>Google Workspace</strong>, <strong>Canva</strong>, and <strong>Powerpoint</strong> to design engaging visual materials and coordinate remote sessions, strictly following SOPs to meet team performance targets.</li>
                         </ul>
                     </div>
                     <h4><em>Sales Manager | Algorithmics</em></h4>
